fix: add overflow css (for neat display)

--- a/static/result.css
+++ b/static/result.css
@@ -5,6 +5,7 @@
     font-weight: bolder;
     font-size: small;
     color: rgb(83, 50, 9);
+    overflow: auto;
 }
 p{
     text-align: center;
